Bug 185585 - icons in quicklauncher are too small if in panel
Summary: icons in quicklauncher are too small if in panel
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Unspecified
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 186003 186199 186527 186589 186592 186655 186686 186744 186886 186916 187200 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-02-26 10:22 UTC by Christoph Thielecke
Modified: 2009-03-16 22:00 UTC (History)
16 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot with 2 quicklauchers (panel and desktop) (346.93 KB, image/png)
2009-02-26 11:04 UTC, Christoph Thielecke
Details
quicklaunchApplet fix for too small icons and applet disappearing after number of icons > max visible icons (1.36 KB, patch)
2009-03-07 23:01 UTC, Lamarque V. Souza
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Thielecke 2009-02-26 10:22:48 UTC
Version:            (using Devel)
Installed from:    Compiled sources

if the panel is small, the icons of the quicklauncher are very small. The minimal size should be 16x16 pixel.
Comment 1 Christoph Thielecke 2009-02-26 11:04:00 UTC
Created attachment 31647 [details]
screenshot with 2 quicklauchers (panel and desktop)

The quicklauncher in panel is between logout/lock plasmaoid and konsole sessions plasmaoid.
The quicklauncher on desktop is to show whats inside.
Comment 2 Jonathan 2009-03-02 18:15:58 UTC
I can confirm this bug with KDE 4.2.1. The behavior in KDE 4.2.0 was still okay.

If the panel is on the right or left side of the screen the size of the icons inside of the quicklauncher are correct. The size is also correct if quicklauncher is added to the desktop. 
It only misbehaves if quicklauncher is inside a toppanel or a bottompanel.

This problem only exists if there are too many icons for one row in the quicklaunch. A newly added quicklaunch has 3 icons and the setting Maximum Row is set to 2, so the problem exists. If I change the Maximum Row setting to 3, or delete one of the icons, the quicklaunch is displayed correctly. But if more than 4 icons are added, quicklaunch always want to display them in more than one row and therefore the icons are always too small.
Comment 3 Jonathan Thomas 2009-03-04 03:14:22 UTC
*** Bug 186003 has been marked as a duplicate of this bug. ***
Comment 4 Trip Ericson 2009-03-05 16:55:10 UTC
I keep 15 icons in a quicklaunch immediately to the left of my system tray, and the whole quicklaunch has disappeared suddenly, even though going to the "Add Widgets" menu shows that it is still enabled.
Comment 5 Jonathan 2009-03-05 16:59:34 UTC
Trip Ericson: Sounds like your problem is related to Bug 186199
Comment 6 Timur 2009-03-06 06:55:53 UTC
I have the same problem on Gentoo x86_64 box with Qt 4.5.0
Comment 7 Lamarque V. Souza 2009-03-06 08:26:04 UTC
*** This bug has been confirmed by popular vote. ***
Comment 8 Lukas Appelhans 2009-03-06 12:31:59 UTC
Hey!
Thanks for the report, I'm working on a sollution now... was this working in 4.2.0?

Lukas
Comment 9 Lamarque V. Souza 2009-03-06 14:53:50 UTC
Yes, it used to work for me when I used KDE 4.2.0 and Qt 4.4.2. When I upgraded to KDE 4.2.1 and Qt 4.5.0 it started to happen here. As described in https://bugs.kde.org/show_bug.cgi?id=186199 if I remove the Task Manager Plasmoid it works as expected.
Comment 10 Alex Sidorenko 2009-03-06 17:08:40 UTC
I can confirm that quicklaunch worked normally on Kubuntu/Intrepid with KDE-4.2.0. After upgrade to 4.2.1 I can see the problem. I still use QT-4.4.3 so the bug does not depend on QT upgrade.

The same problem exists on OpenSUSE-11.1, once again after upgrade to 4.2.1.

Alex
Comment 11 Lukas Appelhans 2009-03-06 18:43:13 UTC
Ok thanks guys! Seems like some guy broke it while fixing a crash. ;)

Lukas
Comment 12 Lamarque V. Souza 2009-03-07 23:01:33 UTC
Created attachment 31888 [details]
quicklaunchApplet fix for too small icons and applet disappearing after number of icons > max visible icons

I have created this patch that fixed the problem to me, please test it. The icons are too small because of s_defaultSpacing being 2 pixels (I guess it is in pixels), maybe we should change it to 1 pixel.
Comment 13 Lamarque V. Souza 2009-03-07 23:03:46 UTC
I mean, the s_defaultSpacing is not the problem but even with this patch the icons a little too small to my taste, so I think we should change s_defaultSpacing to 1 pixel. If you do that you must also change s_defaultIconSize to 16 minus s_defaultSpacing.
Comment 14 Lukas Appelhans 2009-03-08 00:09:01 UTC
*** Bug 186199 has been marked as a duplicate of this bug. ***
Comment 15 Lukas Appelhans 2009-03-08 00:44:51 UTC
SVN commit 936572 by lappelhans:

Fix bug of all icons disappearing!
Thanks to Lamarque Vieira Souza for the original patch (I slightly modified it...).
Someone volunteers for backporting (aka has a checkout of the branch)?

CCMAIL:lamarque@gmail.com
BUG:185585


 M  +3 -8      quicklaunchApplet.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=936572
Comment 16 Dario Andres 2009-03-08 16:01:28 UTC
*** Bug 186527 has been marked as a duplicate of this bug. ***
Comment 17 Lukas Appelhans 2009-03-08 22:39:49 UTC
*** Bug 186592 has been marked as a duplicate of this bug. ***
Comment 18 Jonathan Thomas 2009-03-09 15:02:54 UTC
*** Bug 186655 has been marked as a duplicate of this bug. ***
Comment 19 Jonathan Thomas 2009-03-09 15:09:47 UTC
*** Bug 186589 has been marked as a duplicate of this bug. ***
Comment 20 Stefan Borggraefe 2009-03-09 20:51:38 UTC
*** Bug 186686 has been marked as a duplicate of this bug. ***
Comment 21 Jonathan Thomas 2009-03-10 13:32:02 UTC
*** Bug 186744 has been marked as a duplicate of this bug. ***
Comment 22 Trip Ericson 2009-03-10 19:40:01 UTC
I don't know if it was fixed in Kubuntu or fixed upstream, but upon logging in today my Quicklaunch returned! =)
Comment 23 Dario Andres 2009-03-11 23:42:16 UTC
*** Bug 186886 has been marked as a duplicate of this bug. ***
Comment 24 Dario Andres 2009-03-12 11:39:25 UTC
*** Bug 186916 has been marked as a duplicate of this bug. ***
Comment 25 Rex Dieter 2009-03-12 16:29:51 UTC
confirmed 4.2 backport (r936572 by lappelhans)
Comment 26 Dario Andres 2009-03-15 12:51:34 UTC
*** Bug 187200 has been marked as a duplicate of this bug. ***
Comment 27 mathesis 2009-03-16 20:50:29 UTC
My system is up to date but I still have  this bug.
Removal of .kde or quicklaunch doesn't change anything.
Comment 28 Rex Dieter 2009-03-16 20:51:49 UTC
It was fixed after 4.2.1 release, will be included in 4.2.2 (or you can poke your distro/packager to include the patch, see comment #25)
Comment 29 mathesis 2009-03-16 21:48:13 UTC
(In reply to comment #28)
> It was fixed after 4.2.1 release, will be included in 4.2.2 (or you can poke
> your distro/packager to include the patch, see comment #25)

Backports are enabled (deb http://fr.archive.ubuntu.com/ubuntu/ intrepid-backports main restricted universe multiverse).
Package version of "kde-nightly-kdebase" is 20090315+svn939762-0neon1.
Comment 30 Igor Poboiko 2009-03-16 22:00:21 UTC
I've just updated my Gentoo system, and this bug dissapeared! thanks =)