Fix bug of all icons disappearing! Thanks to Lamarque Vieira Souza for the original patch (I slightly modified it...). Someone volunteers for backporting (aka has a checkout of the branch)?

CCMAIL:lamarque@gmail.com
BUG:185585

svn path=/trunk/KDE/kdebase/workspace/; revision=936572